--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build: .
     volumes:
       - ./app:/app
+      - server-filestore:/filestore/
     ports:
       - "${APP_PORT_EXTERNAL}:${APP_PORT_INTERNAL}"
     environment:
